@@ -685,3 +685,4 @@ table.insert(tests, "pivot_root_to_new_dir")
 table.insert(tests, "multiple_message_commit")
 table.insert(tests, "netsync_epoch_refinement")
 table.insert(tests, "disapproving_with_message")
+table.insert(tests, "add_ignored")
